--- a/config.org
+++ b/config.org
@@ -813,3 +813,12 @@ Enable CUA mode + related settings.
   ;; consider .h files as c++ rather than c by default
   (add-to-list 'auto-mode-alist '("\\.h\\'" . c++-mode))
 #+END_SRC
+* Magit
+:PROPERTIES:
+:ID:       abd1e2b9-fc03-4cc7-a0e6-23f79edf2600
+:END:
+Install Magit
+#+BEGIN_SRC emacs-lisp
+  (use-package magit
+    :ensure t)
+#+END_SRC
