--- a/config.org
+++ b/config.org
@@ -758,3 +758,67 @@ Install Magit
     :ensure t)
   (global-set-key (kbd "C-x g") 'magit-status)
 #+END_SRC
+* LSP
+#+begin_src emacs-lisp
+  (use-package lsp-mode
+     :diminish lsp-mode
+     :hook (prog-mode . lsp-deferred)
+     :bind (:map lsp-mode-map
+            ("C-c C-d" . lsp-describe-thing-at-point))
+     :init (setq lsp-auto-guess-root t       ; Detect project root
+                 lsp-prefer-flymake nil      ; Use lsp-ui and flycheck
+                 flymake-fringe-indicator-position 'right-fringe)
+     :config
+     ;; Configure LSP clients
+     (use-package lsp-clients
+       :ensure nil
+       :init (setq lsp-clients-python-library-directories '("/usr/local/" "/usr/"))))
+
+   (use-package lsp-ui
+     :functions my-lsp-ui-imenu-hide-mode-line
+     :commands lsp-ui-doc-hide
+     :custom-face
+     (lsp-ui-doc-background ((t (:background ,(face-background 'tooltip)))))
+     (lsp-ui-sideline-code-action ((t (:inherit warning))))
+     :bind (:map lsp-ui-mode-map
+            ([remap xref-find-definitions] . lsp-ui-peek-find-definitions)
+            ([remap xref-find-references] . lsp-ui-peek-find-references)
+            ("C-c u" . lsp-ui-imenu))
+     :init (setq lsp-ui-doc-enable t
+                 lsp-ui-doc-use-webkit nil
+                 lsp-ui-doc-delay 0.5
+                 lsp-ui-doc-include-signature t
+                 lsp-ui-doc-position 'top
+                 lsp-ui-doc-border (face-foreground 'default)
+                 lsp-eldoc-enable-hover nil ; Disableeldoc displays in minibuffer
+
+                 lsp-ui-sideline-enable t
+                 lsp-ui-sideline-show-hover nil
+                 lsp-ui-sideline-show-diagnostics nil
+                 lsp-ui-sideline-ignore-duplicate t)
+     :config
+     (add-to-list 'lsp-ui-doc-frame-parameters '(right-fringe . 8))
+
+     ;; `C-g'to close doc
+     (advice-add #'keyboard-quit :before #'lsp-ui-doc-hide)
+
+     ;; Reset `lsp-ui-doc-background' after loading theme
+     (add-hook 'after-load-theme-hook
+               (lambda ()
+                 (setq lsp-ui-doc-border (face-foreground 'default))
+                 (set-face-background 'lsp-ui-doc-background
+                                      (face-background 'tooltip))))
+
+     ;; WORKAROUND Hide mode-line of the lsp-ui-imenu buffer
+     ;; @see https://github.com/emacs-lsp/lsp-ui/issues/243
+     (defun my-lsp-ui-imenu-hide-mode-line ()
+       "Hide the mode-line in lsp-ui-imenu."
+       (setq mode-line-format nil))
+     (advice-add #'lsp-ui-imenu :after #'my-lsp-ui-imenu-hide-mode-line))
+
+   ;; Microsoft python-language-server support
+   (use-package lsp-python-ms
+     :hook (python-mode . (lambda ()
+                            (require 'lsp-python-ms)
+                            (lsp-deferred))))
+#+end_src
